--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
-venv
+venv/
+
 *.pyc
-flaskr.sqlite
+__pycache__/
+
+instance/
+
+.pytest_cache/
+.coverage
+htmlcov/
+
+dist/
+build/
+*.egg-info/
